LRDOCS-9924 update the JVM options for 7.4